<resources>
    <string name="app_name">Meal Planner Application</string>
    <string name="title_activity_search_by_categories">SearchByCategoriesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="categories">Categories</string>
    <string name="searchIngredients">Search Ingredients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectedIngredients">Selected Ingredients</string>
    <string name="all_Ingredients">All Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="countries">Countries</string>
    <string name="viewAll">View All</string>
    <string name="AddToFavourite">Add To Favourite</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="pleaseEnterUserName">Please enter username</string>
    <string name="pleaseEnterEmail">Please enter email</string>
    <string name="pleaseEnterPassword">Please enter password</string>
    <string name="pleaseEnterConfirmPassword">Please enter confirmation password</string>
    <string name="wrongConfirmPassword">The password confirmation doesn\'t match</string>
    <string name="passwordIsWeek">Password must be 6 or more characters</string>
    <string name="pleaseEnterValidEmail">You have entered an Invalid e-mail, Please try again</string>
    <string name="repeatingEmail">Email is already registered, Please use another email.</string>
    <string name="HaveAnAccountQuestion">"Don't have an account? SignUp"</string>
    <string name="password">Password</string>
    <string name="skip">SKIP</string>
    <string name="forgetYourPassword">Forgot Your Password?</string>
    <string name="signIn">Sign In</string>
    <string name="emailNotExist">User doesn\'t exist or is no longer valid, Please register</string>
    <string name="invalidCredentials">Invalid credentials. Kindly,check and re-enter</string>
    <string name="pleaseEnterEmailToResetYourPassword">Please enter your registered email</string>
    <string name="pleaseEnterYourRegisteredEmail">Please enter your registered Email</string>
    <string name="resetPassword">Reset Password</string>
    <string name="pleaseEnterYourRegisteredEmailToResetPassword">Please enter your registered email</string>
    <string name="emailIsRequired">Email is required</string>
    <string name="somethingWentWrong">Something Went Wrong</string>
    <string name="pleaseCheckYourInboxForPasswordResetLink">Please check your inbox for password reset link</string>
    <string name="registeredIsFailed">Registered is failed, Please try again</string>
    <string name="logout">Logout</string>
    <string name="searchCategories">Search Categories</string>
    <string name="SearchByCountries">Search Countries</string>
    <string name="searchMeal">Search Meal</string>
    <string name="addToPlan">Add To Plan</string>
    <string name="meal">Meal</string>
    <string name="SearchMealWithIngredients">Search meal with ingredients</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="favorite">favorite</string>
    <string name="myPlan">my plan</string>
    <string name="noIngredientsAdded">No ingredients selected</string>
    <string name="mealName">Meal name: </string>
    <string name="mealCountry">Meal country</string>
    <string name="mealDescription">Meal Description</string>
    <string name="step">Steps</string>
    <string name="showDetails">Show details</string>
    <string name="breakfast">Breakfast</string>
    <string name="launch">Launch</string>
    <string name="dinner">Dinner</string>
    <string name="chooseDay">Choose day :</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="success">Successfully</string>
    <string name="pleaseCheckTimeAndData">Time and date are required</string>
    <string name="weeklyPlanner">Weekly plan</string>
    <string name="pleaseCheckYourConnection">Please check your connection</string>
    <string name="youShouldSignInToAddFav">you can\'t add meals to fav, please signup</string>
    <string name="youShouldSignInToAddPlan">you can\'t add meals to plan, please Signup</string>
    <string name="youAreGuest">you are guest, you can\'t see meals, please Signup</string>
    <string name="signup">Signup</string>
    <string name="pleaseCheckEmailAndPass">Please check Email and password</string>
    <string name="signinWithGoogle">Signin with google</string>
</resources>